Cambio de Historias

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 							<!-- Main Title -->
 							<div class="resumo_fn_main_title">
-								<h3 class="title">Mi hisoria</h3>
+								<h3 class="title">Mi historia</h3>
 								<p class="desc">Me gusta ayudar a crear soluciones tecnológicas con sistemas de programación avanzados.</p>
 								<p class="desc">Tu web es más que solo fotos, es tu mundo, es tu negocio y es importante crear una estrategia para que esa ventana al mundo sea óptima para tener los resultados que deseas.</p>
 								<p class="desc">Mi visión esta basada en tres pilares importantes, el marketing estratégico para tener una dirección, y crear una plataforma interesante para el usuario (UX) y así crear una web poderosa y atractiva para tener el impulso en ventas que deseas.</p>
