datos de ingreso

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 
 <!-- Wrapper All -->
-<div class="resumo_fn_wrapper">
+<div class="vin_fn_wrapper">
 
 	<!-- MODALBOX -->
-	<div class="resumo_fn_modalbox">
+	<div class="vin_fn_modalbox">
 		<a class="extra_closer" href="#"></a>
 		<div class="box_inner">
 			<a class="closer" href="#"><span></span></a>
@@ -53,13 +53,13 @@
 	</div>
 	<!-- /MODALBOX --> 
 	
-	<div class="resumo_fn_content">
+	<div class="vin_fn_content">
 		
 		<!-- Main Left Part -->
-		<div class="resumo_fn_left">
+		<div class="vin_fn_left">
 
 			<!-- Page -->
-			<div class="resumo_fn_page">
+			<div class="vin_fn_page">
 
 
 				<!-- Home Section -->
@@ -68,7 +68,7 @@
 						<div class="roww">
 
 							<!-- Main Title -->
-							<div class="resumo_fn_main_title">
+							<div class="vin_fn_main_title">
 								<!-- <h3 class="subtitle">Un poco de mi</h3> -->
 								<h3 class="title">Programador Front-End | UX/UI</h3>
 								<p class="desc">Me apasiona crear cosas grandiosas, a lo largo de los años me he especializado para entregar el 1000% de mi esfuerzo y tener grandes resultados.</p>
@@ -88,7 +88,7 @@
 						<div class="roww">
 
 							<!-- Main Title -->
-							<div class="resumo_fn_main_title">
+							<div class="vin_fn_main_title">
 								<h3 class="title">Mi historia</h3>
 								<p class="desc">Me gusta ayudar a crear soluciones tecnológicas con sistemas de programación avanzados.</p>
 								<p class="desc">Tu web es más que solo fotos, es tu mundo, es tu negocio y es importante crear una estrategia para que esa ventana al mundo sea óptima para tener los resultados que deseas.</p>
@@ -97,7 +97,7 @@
 							<!-- /Main Title -->
 
 							<!-- About Information -->
-							<div class="resumo_fn_about_info">
+							<div class="vin_fn_about_info">
 								<div class="about_left">
 									<table>
 
@@ -114,7 +114,7 @@
 								</div>
 								<div class="about_right">
 									<!-- Download CV Button -->
-									<div class="resumo_fn_cv_btn">
+									<div class="vin_fn_cv_btn">
 										<a href="/img/CV-Vincent-Ramirez-Frontend.pdf" download>
 											<span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
@@ -130,7 +130,7 @@
 
 
 							<!-- Tabs Shortcode -->
-							<div class="resumo_fn_tabs">
+							<div class="vin_fn_tabs">
 
 								<!-- Tab: Header -->
 								<div class="tab_header">
@@ -149,7 +149,7 @@
 									<div id="tab1" class="tab_item active">
 
 										<!-- Boxed List -->
-										<div class="resumo_fn_boxed_list">
+										<div class="vin_fn_boxed_list">
 											<ul>
 												<li>
 													<div class="item">
@@ -196,7 +196,7 @@
 									<div id="tab2" class="tab_item">
 
 										<!-- Boxed List -->
-										<div class="resumo_fn_boxed_list">
+										<div class="vin_fn_boxed_list">
 											<ul>
 												<li>
 													<div class="item">
@@ -251,7 +251,7 @@
 									<div id="tab3" class="tab_item">
 
 										<!-- Progress Bar -->
-										<div class="resumo_fn_progress_bar">
+										<div class="vin_fn_progress_bar">
 
 											<div class="progress_item" data-value="95">
 												<div class="item_in">
@@ -289,7 +289,7 @@
 										<!-- /Progress Bar -->
 
 										<!-- Description -->
-										<div class="resumo_fn_desc">
+										<div class="vin_fn_desc">
 											<p>Siempre he buscando mejorar mis skills técnicos aprendiendo cada día más y probando nuevas herramientas. <br>
 											<p>	Además me siento muy orgulloso que a lo largo de mi vida laborar he adquirido también habilidades blandas solidas como liderazgo, comunicación, responsabilidad y responsabilidad social.</p>
 										</div>
@@ -316,7 +316,7 @@
 					<div class="container">
 						<div class="roww">
 							<!-- Main Title -->
-							<div class="resumo_fn_main_title">
+							<div class="vin_fn_main_title">
 								<div class="my__nav">
 									<a href="#" class="prev"><span></span></a>
 									<a href="#" class="next"><span></span></a>
@@ -453,7 +453,7 @@
 						<div class="roww">
 
 							<!-- Main Title -->
-							<div class="resumo_fn_main_title">
+							<div class="vin_fn_main_title">
 								<h3 class="subtitle">Testimonios</h3>
 								<h3 class="title">Clientes Felices</h3>
 							</div>
@@ -461,7 +461,7 @@
 
 
 							<!-- Testimonials -->
-							<div class="resumo_fn_testimonials">
+							<div class="vin_fn_testimonials">
 								<div class="my__nav">
 									<a href="#" class="prev"><span></span></a>
 									<a href="#" class="next"><span></span></a>
@@ -508,7 +508,7 @@
 						<div class="roww">
 
 							<!-- Main Title -->
-							<div class="resumo_fn_main_title">
+							<div class="vin_fn_main_title">
 								<h3 class="subtitle">Noticias &amp; Tips</h3>
 								<h3 class="title">Esto te puede interesar</h3>
 							</div>
@@ -516,7 +516,7 @@
 
 
 							<!-- Blog List -->
-							<div class="resumo_fn_blog_list">
+							<div class="vin_fn_blog_list">
 
 								<ul class="modal_items" data-from="blog" data-count="5">
 									<li>
@@ -685,10 +685,10 @@
 				<!-- Contact Section -->
 				<section id="contact">
 					<div class="container">
-						<div class="roww resumo_fn_contact">
+						<div class="roww vin_fn_contact">
 
 							<!-- Main Title -->
-							<div class="resumo_fn_main_title">
+							<div class="vin_fn_main_title">
 								<h3 class="subtitle">Contáctame</h3>
 								<h3 class="title">Conversemos</h3>
 								<p class="desc">Nos podemos comunicar, con un simple click, me puedes enviar run mensaje directo por este medio, o escribirme en mis redes sociales que puedes encontrarlos en la sección de menu.    </p>
@@ -748,7 +748,7 @@
 
 			<footer id="footer">
 				<div class="footer_top">
-					<a href="#" class="resumo_fn_totop"><span></span></a>
+					<a href="#" class="vin_fn_totop"><span></span></a>
 				</div>
 				<div class="footer_content">
 					<div class="container">
@@ -763,7 +763,7 @@
 		<!-- /Main Left Part -->
 
 		<!-- Main Right Part -->
-		<div class="resumo_fn_right">
+		<div class="vin_fn_right">
 
 			<!-- Menu Triggger -->
 			<a href="#" class="menu_trigger">
@@ -806,8 +806,8 @@
 	</div>
 	
 	<!-- Right Hidden Navigation -->
-	<a href="#" class="resumo_fn_nav_overlay"></a>
-	<div class="resumo_fn_navigation">
+	<a href="#" class="vin_fn_nav_overlay"></a>
+	<div class="vin_fn_navigation">
 		<a href="#" class="closer"></a>
 		
 		<!-- Navigation Content -->
