--- a/index.html
+++ b/index.html
@@ -696,9 +696,9 @@
 							<!-- /Main Title -->
 
 							<!-- Contact Form -->
-							<form class="contact_form" action="/" method="post" autocomplete="off" data-email="jramirez.contacto@gmail.com">
+							<form class="contact_form" action="./modal/contact.php" method="post" autocomplete="off" data-email="jramirez.contacto@gmail.com">
 
-								<div class="success" data-success="Your message has been received, we will contact you soon."></div>
+								<div class="success" data-success="Su mensaje ha sido recibido, pronto nos pondremos en contacto con usted."></div>
 								<div class="empty_notice"><span>Datos requeridos!</span></div>
 								<!-- -->
 
@@ -752,7 +752,7 @@
 				</div>
 				<div class="footer_content">
 					<div class="container">
-						<p>Copyright © 2022. All rights reserved. <br />
+						<p>Copyright © 2022. Todos los derechos reservador. <br />
 						Desarrollado por <a class="fn__link" href="#" target="_blank">Vincent</a></p>
 					</div>
 				</div>
