--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Soy desarrollador web en Lima, creo diseños inpactantes y de alto rendimiento para que tu web te ayude a impulsar tu empresa.">
 <meta name="author" content="Vincent Ramirez">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Desarrollador Front-End U/UIX</title>
+<title>Desarrollador Front-End UX/UI</title>
 
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
